<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/addContact"
=======
        android:text="@string/title_add_contact"
>>>>>>> ecb34ed8bf0e4e50d0381f8ee2da5a0b1ec6b16c
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etxt_name_phone_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
<<<<<<< HEAD
        android:hint="@string/enter_name"
=======
        android:hint="@string/msg_enter_name"
>>>>>>> ecb34ed8bf0e4e50d0381f8ee2da5a0b1ec6b16c
        tools:text="name" />

    <EditText
        android:id="@+id/etxt_number_phone_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
<<<<<<< HEAD
        android:hint="@string/enter_phone"
=======
        android:hint="@string/msg_enter_phone_number"
>>>>>>> ecb34ed8bf0e4e50d0381f8ee2da5a0b1ec6b16c
        android:inputType="phone"
        tools:text="phone number" />

    <Button
        android:id="@+id/btn_add_phone_user"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add"
        android:onClick="onAddUser"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="138dp" />

</LinearLayout>