<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="onAddClick"
        android:text="@string/add"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="138dp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:onClick="onDeleteClick"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="257dp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:onClick="onUpdateClick"
        android:text="@string/update"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="381dp" />
</LinearLayout>