<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center_horizontal"
        android:text="@string/update"
        android:textAlignment="center"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/etxt_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:editable="true"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:hint="@string/contactName"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />


    <EditText
        android:id="@+id/etxt_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2D93AC"
        android:onClick="onFindClick"
        android:text="@string/find"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

</LinearLayout>